[package]
name = "woff"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a parser for fonts in Web Open Font Format (WOFF)."
documentation = "https://docs.rs/truetype"
homepage = "https://github.com/bodoni/woff"
repository = "https://github.com/bodoni/woff"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "typeface", "typography", "woff"]
